call template change local

--- a/.github/workflows/lifecycle-update-boilerplate-code.yaml
+++ b/.github/workflows/lifecycle-update-boilerplate-code.yaml
@@ -54,7 +54,7 @@ jobs:
           path: boilerplate-update/cookiecutter-gh-project
           persist-credentials: false
 
-      - name: create new branch for integrate changes
+      - name: Debug
         run: |
           ls -all
           ls sources -all
