update docs and add extra parameters

--- a/{{cookiecutter.module_slug}}/.github/dependabot.yml
+++ b/{{cookiecutter.module_slug}}/.github/dependabot.yml
@@ -24,3 +24,9 @@ updates:
     schedule:
       interval: "daily"
 {% endif -%}
+{%- if cookiecutter.dependabot_golang == "y" %}
+  - package-ecosystem: "gomod"
+    directory: "/"
+    schedule:
+      interval: "daily"
+{% endif -%}
