--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,4 +1,3 @@
-name: Release Drafter
 
 on:
   push:
@@ -7,9 +6,6 @@ on:
 
 jobs:
   update_release_draft:
-    name: Update Release Draft
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: release-drafter/release-drafter@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    uses: nolte/gh-plumbing/.github/workflows/reuseable-release-drafter.yml@v1.0.0
+    secrets:
+      token: ${{ secrets.GITHUB_TOKEN }}
