--- a/.github/workflows/release-cd-refresh-master.yml
+++ b/.github/workflows/release-cd-refresh-master.yml
@@ -1,20 +1,9 @@
-name: Release Deliver to Master
-
 on:
   release:
     types: [published]
 
 jobs:
-  publish_docs:
-    name: "Publish the the Release to Master"
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout master
-        uses: actions/checkout@v2.3.4
-      - name: Merge Tag -> Master
-        uses: devmasx/merge-branch@v1.3.1
-        with:
-          type: now
-          from_branch: ${{ github.event.ref }}
-          target_branch: main
-          github_token: ${{ github.token }}
+  refresh_presentation_branch:
+    uses: nolte/gh-plumbing/.github/workflows/reuseable-release-cd-refresh-master.yml@develop
+    secrets:
+      token: ${{ secrets.GITHUB_TOKEN }}
