--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "extends": [
-    "config:base"
+    "config:base",
+    ":dependencyDashboard"
   ],
   "pip_requirements": {
     "fileMatch": ["requirements.*.txt"]
