--- a/.github/workflows/release-cd-refresh-master.yml
+++ b/.github/workflows/release-cd-refresh-master.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   refresh_presentation_branch:
-    uses: nolte/gh-plumbing/.github/workflows/reuseable-release-cd-refresh-master.yml@develop
+    uses: nolte/gh-plumbing/.github/workflows/reuseable-release-cd-refresh-master.yml@v1.0.24
     secrets:
       token: ${{ secrets.GITHUB_TOKEN }}
     with:
