--- a/{{cookiecutter.module_slug}}/.github/workflows/release-cd-refresh-master.yml
+++ b/{{cookiecutter.module_slug}}/.github/workflows/release-cd-refresh-master.yml
@@ -4,6 +4,8 @@ on:
 
 jobs:
   refresh_presentation_branch:
-    uses: nolte/gh-plumbing/.github/workflows/reuseable-release-cd-refresh-master.yml@develop
+    uses: nolte/gh-plumbing/.github/workflows/reuseable-release-cd-refresh-master.yml@v1.0.24
     secrets:
-      token: {{"${{"}} github.token {{"}}"}}
+      token: {{"${{"}} secrets.GITHUB_TOKEN {{"}}"}}
+    with:
+      target_branch: main
