--- a/{{cookiecutter.module_slug}}/.github/workflows/release-drafter.yml
+++ b/{{cookiecutter.module_slug}}/.github/workflows/release-drafter.yml
@@ -1,15 +1,14 @@
+---
 name: Release Drafter
 
 on:
   push:
+    # branches to consider in the event; optional, defaults to all
     branches:
       - develop
 
 jobs:
   update_release_draft:
-    name: Update Release Draft
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: release-drafter/release-drafter@v5
-        env:
-          GITHUB_TOKEN: {{"${{"}} secrets.GITHUB_TOKEN {{"}}"}}
+    uses: nolte/gh-plumbing/.github/workflows/reuseable-release-drafter.yml@v1.0.24
+    secrets:
+      token: {{"${{"}} secrets.GITHUB_TOKEN {{"}}"}}
