update workflow permissions for github actions

--- a/{{cookiecutter.module_slug}}/.github/workflows/release-cd-refresh-master.yml
+++ b/{{cookiecutter.module_slug}}/.github/workflows/release-cd-refresh-master.yml
@@ -9,3 +9,5 @@ jobs:
       token: {{"${{"}} secrets.GITHUB_TOKEN {{"}}"}}
     with:
       target_branch: main
+    permissions:
+      contents: write
