--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,15 @@
 site_name: Github Cookiecutter Templates
-theme: material
+theme:
+  name: material
+docs_dir: docs/
+repo_name: 'nolte/cookiecutter-gh-project'
+repo_url: 'https://github.com/nolte/cookiecutter-gh-project'
+plugins:
+  - include-markdown
 markdown_extensions:
+  - pymdownx.inlinehilite:
+  - pymdownx.superfences:
+  - pymdownx.highlight:
   - toc:
       permalink: True
 extra_css:
